<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:background="@drawable/background_white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/s16dp">

    <com.studio.makergif.utils.HelveBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/s10dp"
        android:text="@string/image_quality"
        android:textColor="@color/xanhdark"
        android:textSize="@dimen/s26sp" />

    <LinearLayout
        android:id="@+id/ln_hight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/s8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_hight"
            android:layout_width="@dimen/s40dp"
            android:layout_height="@dimen/s40dp"
            android:src="@drawable/ic_select" />

        <com.studio.makergif.utils.Helve
            android:textColor="@color/xanhdark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/s10dp"
            android:text="@string/high_quality"
            android:textSize="@dimen/s22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_low"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/s8dp"
        android:layout_marginTop="@dimen/s10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView

            android:id="@+id/iv_low"
            android:layout_width="@dimen/s40dp"
            android:layout_height="@dimen/s40dp"
            android:src="@drawable/ic_select_click" />

        <com.studio.makergif.utils.Helve
            android:textColor="@color/xanhdark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/s10dp"
            android:text="@string/low_quality"
            android:textSize="@dimen/s22sp" />
    </LinearLayout>

    <com.studio.makergif.utils.Helve
        android:id="@+id/check_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/s20dp"
        android:layout_marginTop="@dimen/s8dp"
        android:background="@drawable/bt_bluedrak1"
        android:paddingBottom="@dimen/s10dp"
        android:paddingLeft="@dimen/s40dp"
        android:paddingRight="@dimen/s40dp"
        android:paddingTop="@dimen/s10dp"
        android:text="@string/ok"
        android:textColor="#fff"
        android:textSize="@dimen/s24sp" />
</LinearLayout>
