<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#7f405565"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/s65dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/s16dp"
            android:src="@drawable/ic_back" />

        <com.studio.makergif.utils.Helve
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/whitle"
            android:textSize="@dimen/s24sp" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <com.studio.makergif.utils.Helve
                android:id="@+id/tv_apply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/apply"
                android:textColor="@color/whitle"
                android:textSize="@dimen/s24sp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/s15dp"
                android:src="@drawable/ic_share"
                android:visibility="gone" />

            <com.studio.makergif.utils.Helve
                android:id="@+id/tv_save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/whitle"
                android:textSize="@dimen/s24sp"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>
